--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shoppino</title>
+    <title>شاپینو</title>
+    <link rel="stylesheet" href="/assests/styles/main.css">
+    <link rel="shortcut icon" href="/assests/images/logo-icon.png" type="image/x-icon">
 </head>
 <body>
-    Shopino
+    <header>
+        <div class="header-box">
+            <div class="title-and-logo">
+                <img class="header-logo" src="/assests/images/logo-icon.png">
+                <h1 class="header-title">شاپینو</h1>
+            </div>
+            <div class="header-items">
+                <a href="">
+                    <img src="/assests/images/shopping.png" id="shopping-icon" class="header-item">
+                </a> 
+                <a href="">
+                    <img src="/assests/images/login.png" id="login-icon" class="header-item">
+                </a>
+                <a href="">
+                    <img src="/assests/images/support.png" id="support-icon" class="header-item">
+                </a>
+            </div>
+        </div>
+    </header>
+    <nav>
+        <div class="nav-items">
+            <ul class="nav-items-list">
+                <li>دسته بندی &DownArrow;</li>
+                <li>پرفروش</li>
+                <li>محبوب ترین ها</li>
+            </ul>
+        </div>
+        <div class="search-box">
+            <button class="search">
+                <img src="/assests/images/search.png">
+            </button>
+            <input type="text" class="search-input" placeholder="جستجو کنید . . . ">
+        </div>
+    </nav>
 </body>
 </html>
