--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <header>
         <div class="header-box">
             <div class="title-and-logo">
-                <img class="header-logo" src="/assests/images/logo-icon.png">
+                <div class="header-logo-box">
+                    <img src="/assests/images/heart-icon.png" style="z-index: 2;" class="header-logo logo2">
+                    <img src="/assests/images/hands-icon.png" style="z-index: 3;" class="header-logo logo3">
+                    <img class="header-logo logo1" style="z-index: 1;" src="/assests/images/logo-icon.png">
+                </div>
                 <h1 class="header-title">شاپینو</h1>
             </div>
             <div class="header-items">
