--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" href="/assests/images/logo-icon.png" type="image/x-icon">
 </head>
 <body>
+
+<!-- Header start -->
+    
     <header>
         <div class="header-box">
             <div class="title-and-logo">
@@ -31,10 +34,13 @@
             </div>
         </div>
     </header>
+
+<!-- Header end | Nav bar start -->
+
     <nav>
         <div class="nav-items">
             <ul class="nav-items-list">
-                <li>دسته بندی &DownArrow;</li>
+                <li class="categories-li">دسته بندی &DownArrow;</li>
                 <li>پرفروش</li>
                 <li>محبوب ترین ها</li>
             </ul>
@@ -45,6 +51,38 @@
             </button>
             <input type="text" class="search-input" placeholder="جستجو کنید . . . ">
         </div>
+        <ul class="categories-list">
+            <li>دسته 1</li>
+            <li>دسته 2</li>
+            <li>دسته 3</li>
+            <li>دسته 4</li>
+            <li>دسته 5</li>
+        </ul>
     </nav>
+
+<!-- Nav bar end | Slideshow start -->
+
+    <div class="slide-show-box">
+
+        <div class="slide1"><img src="/assests/images/slides/slide1"></div>
+        <div class="slide2"><img src="/assests/images/slides/slide2"></div>
+        <div class="slide3"><img src="/assests/images/slides/slide3"></div>
+        <div class="slide4"><img src="/assests/images/slides/slide4"></div>
+        <div class="slide5"><img src="/assests/images/slides/slide5"></div>
+
+        <div class="buttons">
+            <button class="slide-move-button">&LeftArrow;</button>
+            <button class="slide-move-button">&RightArrow;</button>
+        </div>
+
+        <div class="dots">
+            <div class="dot1"></div>
+            <div class="dot2"></div>
+            <div class="dot3"></div>
+            <div class="dot4"></div>
+            <div class="dot5"></div>
+        </div>
+    </div>
+    <script src="/assests/scripts/app.js"></script>
 </body>
 </html>
