--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav>
         <div class="nav-items">
             <ul class="nav-items-list">
-                <li class="categories-li">دسته بندی &DownArrow;</li>
+                <li class="categories-li">بیشترین تخفیف ها</li>
                 <li>پرفروش</li>
                 <li>محبوب ترین ها</li>
             </ul>
@@ -51,36 +51,88 @@
             </button>
             <input type="text" class="search-input" placeholder="جستجو کنید . . . ">
         </div>
-        <ul class="categories-list">
+        <!-- <ul class="categories-list">
             <li>دسته 1</li>
             <li>دسته 2</li>
             <li>دسته 3</li>
             <li>دسته 4</li>
             <li>دسته 5</li>
-        </ul>
+        </ul> -->
     </nav>
 
 <!-- Nav bar end | Slideshow start -->
 
     <div class="slide-show-box">
-
-        <div class="slide1"><img src="/assests/images/slides/slide1"></div>
-        <div class="slide2"><img src="/assests/images/slides/slide2"></div>
-        <div class="slide3"><img src="/assests/images/slides/slide3"></div>
-        <div class="slide4"><img src="/assests/images/slides/slide4"></div>
-        <div class="slide5"><img src="/assests/images/slides/slide5"></div>
-
-        <div class="buttons">
-            <button class="slide-move-button">&LeftArrow;</button>
-            <button class="slide-move-button">&RightArrow;</button>
+        <div class="slides-container">
+            <div class="slide"><img src="/assests/images/slides/slide1.png"></div>
+            <div class="slide"><img src="/assests/images/slides/slide2.png"></div>
+            <div class="slide"><img src="/assests/images/slides/slide3.png"></div>
+            <div class="slide"><img src="/assests/images/slides/slide4.png"></div>
+            <div class="slide"><img src="/assests/images/slides/slide5.png"></div>
+            <div class="slide"><img src="/assests/images/slides/slide6.png"></div>
         </div>
+    </div>
 
-        <div class="dots">
-            <div class="dot1"></div>
-            <div class="dot2"></div>
-            <div class="dot3"></div>
-            <div class="dot4"></div>
-            <div class="dot5"></div>
+<!-- Slideshow end | best seller products start -->
+
+    <div class="best-seller-box">
+        <h3 class="best-seller-title">پرفروش ترین های این ماه</h3>
+        <div class="best-seller-products">
+            <div class="product">
+                <img src="/assests/images/product-thumbnails/item1.png" class="product-thumbnail">
+                <div class="product-content">
+                    <h6 class="product-title">کالا 1</h6>
+                    <p class="product-price">قیمت : <span class="product-price-span">4,000,000</span></p>
+                    <div class="product-buttons-box">
+                        <button class="add-to-cart"><img src="/assests/images/shopping.png" class="cart"></button>
+                        <button class="observe-product">مشاهده محصول</button>
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/assests/images/product-thumbnails/item2.png" class="product-thumbnail">
+                <div class="product-content">
+                    <h6 class="product-title">کالا 2</h6>
+                    <p class="product-price">قیمت : <span class="product-price-span">4,000,000</span></p>
+                    <div class="product-buttons-box">
+                        <button class="add-to-cart"><img src="/assests/images/shopping.png" class="cart"></button>
+                        <button class="observe-product">مشاهده محصول</button>
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/assests/images/product-thumbnails/item3.png" class="product-thumbnail">
+                <div class="product-content">
+                    <h6 class="product-title">کالا 3</h6>
+                    <p class="product-price">قیمت : <span class="product-price-span">4,000,000</span></p>
+                    <div class="product-buttons-box">
+                        <button class="add-to-cart"><img src="/assests/images/shopping.png" class="cart"></button>
+                        <button class="observe-product">مشاهده محصول</button>
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/assests/images/product-thumbnails/item4.png" class="product-thumbnail">
+                <div class="product-content">
+                    <h6 class="product-title">کالا 4</h6>
+                    <p class="product-price">قیمت : <span class="product-price-span">4,000,000</span></p>
+                    <div class="product-buttons-box">
+                        <button class="add-to-cart"><img src="/assests/images/shopping.png" class="cart"></button>
+                        <button class="observe-product">مشاهده محصول</button>
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <img src="/assests/images/product-thumbnails/item5.png" class="product-thumbnail">
+                <div class="product-content">
+                    <h6 class="product-title">کالا 5</h6>
+                    <p class="product-price">قیمت : <span class="product-price-span">4,000,000</span></p>
+                    <div class="product-buttons-box">
+                        <button class="add-to-cart"><img src="/assests/images/shopping.png" class="cart"></button>
+                        <button class="observe-product">مشاهده محصول</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="/assests/scripts/app.js"></script>
