--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>شاپینو</title>
     <link rel="stylesheet" href="/assests/styles/main.css">
     <link rel="shortcut icon" href="/assests/images/logo-icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -135,6 +136,39 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-column">
+            <h3 class="footer-title">درباره شاپینو</h3>
+            <p class="footer-info">فروشگاه اینترنتی Shopino با هدف ارائه بهترین محصولات با قیمت مناسب و کیفیت عالی تأسیس شده است. ما به مشتری مداری و رضایت شما اهمیت می‌دهیم.</p>
+            <div class="social-media-box">
+                <a href="instagram/shopino"><i class="fa-instagram instagram"></i></a>
+                <a href="twitter/shapino"><i class="fa-twitter twitter"></i></a>
+                <a href="telegram/shapino"><i class="fa-telegram telegram"></i></a>
+                <a href="facebook/shopino"><i class="fa-facebook facebook"></i></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="footer-title">لینک های سریع</h3>
+            <div class="fast-links">
+                <a href="" class="fast-link">صفحه </a>
+                <a href="" class="fast-link">محصولات</a>
+                <a href="" class="fast-link">درباره ما</a>
+                <a href="" class="fast-link">تماس با ما</a>
+                <a href="" class="fast-link">وبلاگ</a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="footer-title">تماس با ما</h3>
+            <div class="contact-info"><i class="fas fa-map-marker-alt"></i><span>اراک ، میدان شورا ، پاساژ طلا ، طبقه دوم</span></div>
+            <div class="contact-info"><i class="fas fa-phone"></i><span>09937776409</span></div>
+            <div class="contact-info"><i class="fas fa-envelope"></i><span>MhdiEsfndiari@gmail.com</span></div>
+            <div class="contact-info"><i class="fas fa-clock"></i><span>شنبه تا چهارشنبه : ساعت 7 تا 2 ظهر</span></div>
+        </div>
+        <div class="footer-column">
+            <h3 class="footer-title">عضویت در خبرنامه</h3>
+            <p class="updating">این بخش درحال بروز رسانی میباشد</p>
+        </div>
+    </footer>
     <script src="/assests/scripts/app.js"></script>
 </body>
 </html>
