--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1 class="header-t itle">شاپینو</h1>
             </div>
             <div class="header-items">
-                <a href="">
+                <a href="/assests/pages/productDetails.html">
                     <img src="/assests/images/shopping.png" id="shopping-icon" class="header-item">
                 </a> 
                 <a href="">
